unpackaged/main/default/objects/NF_Agents_Performance__c/NF_Agents_Performance__c.object-meta.xml
<CustomObject>
    <label>Agents Performance</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Agents Performance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agents Performances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>