unpackaged/main/default/objects/NF_Agents_Performance__c/fields/AvailableTime__c.field-meta.xml
<CustomField>
    <fullName>AvailableTime__c</fullName>
    <label>AvailableTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>