unpackaged/main/default/objects/NF_Agents_Performance__c/fields/ConsultTime__c.field-meta.xml
<CustomField>
    <fullName>ConsultTime__c</fullName>
    <label>ConsultTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>