unpackaged/main/default/objects/NF_Agents_Performance__c/fields/InboundAvgTalkTime__c.field-meta.xml
<CustomField>
    <fullName>InboundAvgTalkTime__c</fullName>
    <label>InboundAvgTalkTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>