unpackaged/main/default/objects/NF_Agents_Performance__c/fields/InboundTalkTime__c.field-meta.xml
<CustomField>
    <fullName>InboundTalkTime__c</fullName>
    <label>InboundTalkTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>