unpackaged/main/default/objects/NF_Agents_Performance__c/fields/LoginTime__c.field-meta.xml
<CustomField>
    <fullName>LoginTime__c</fullName>
    <label>LoginTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>