unpackaged/main/default/objects/NF_Agents_Performance__c/fields/Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Occupancy__c</fullName>
    <label>Occupancy</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>