unpackaged/main/default/objects/NF_Agents_Performance__c/fields/OutboundAvgTalkTime__c.field-meta.xml
<CustomField>
    <fullName>OutboundAvgTalkTime__c</fullName>
    <label>OutboundAvgTalkTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>