unpackaged/main/default/objects/NF_Agents_Performance__c/fields/OutboundHandled__c.field-meta.xml
<CustomField>
    <fullName>OutboundHandled__c</fullName>
    <label>OutboundHandled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>