unpackaged/main/default/objects/NF_Agents_Performance__c/fields/OutboundTalkTime__c.field-meta.xml
<CustomField>
    <fullName>OutboundTalkTime__c</fullName>
    <label>OutboundTalkTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>