unpackaged/main/default/objects/NF_Agents_Performance__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start of the time duration that was used in API Call</description>
    <label>Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>