unpackaged/main/default/objects/NF_Agents_Performance__c/fields/TotalAvgTalkTime__c.field-meta.xml
<CustomField>
    <fullName>TotalAvgTalkTime__c</fullName>
    <label>TotalAvgTalkTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>