unpackaged/main/default/objects/NF_Agents_Performance__c/fields/TotalHandled__c.field-meta.xml
<CustomField>
    <fullName>TotalHandled__c</fullName>
    <label>TotalHandled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>