unpackaged/main/default/objects/NF_Agents_Performance__c/fields/WorkingRate__c.field-meta.xml
<CustomField>
    <fullName>WorkingRate__c</fullName>
    <label>WorkingRate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>