unpackaged/main/default/objects/NF_Agents_Performance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AgentId__c</columns>
    <columns>TeamId__c</columns>
    <columns>AgentOffered__c</columns>
    <columns>InboundHandled__c</columns>
    <columns>InboundTime__c</columns>
    <columns>InboundTalkTime__c</columns>
    <columns>InboundAvgTalkTime__c</columns>
    <columns>OutboundHandled__c</columns>
    <columns>OutboundTime__c</columns>
    <columns>OutboundTalkTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>